@@ -7,7 +7,7 @@ import com.auth0.jwt.exceptions.JWTDecodeException;
 import com.auth0.jwt.exceptions.JWTVerificationException;
 import com.ax.demo.entity.Userinfo;
 import com.ax.demo.interceptor.PassToken;
-import com.ax.demo.interceptor.UserLoginToken;
+import com.ax.demo.interceptor.RequireToken;
 import com.ax.demo.service.IUserinfoService;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.web.method.HandlerMethod;
@@ -18,7 +18,7 @@ import javax.servlet.http.HttpServletRequest;
 import javax.servlet.http.HttpServletResponse;
 import java.lang.reflect.Method;
 
-public class AuthenticationInterceptor implements HandlerInterceptor {
+public class TokenInterceptor implements HandlerInterceptor {
     @Autowired
     private IUserinfoService userService;
 
@@ -28,11 +28,14 @@ public class AuthenticationInterceptor implements HandlerInterceptor {
                              HttpServletResponse httpServletResponse,
                              Object object) throws Exception {
 
-        String token = httpServletRequest.getHeader("token");// 从 http 请求头中取出 token
         // 如果不是映射到方法直接通过
         if (!(object instanceof HandlerMethod)) {
             return true;
         }
+
+//         从 http 请求头中取出 token
+        String token = httpServletRequest.getHeader("token");
+
         HandlerMethod handlerMethod = (HandlerMethod) object;
         Method method = handlerMethod.getMethod();
         //检查是否有passtoken注释，有则跳过认证
@@ -43,9 +46,9 @@ public class AuthenticationInterceptor implements HandlerInterceptor {
             }
         }
         //检查有没有需要用户权限的注解
-        if (method.isAnnotationPresent(UserLoginToken.class)) {
-            UserLoginToken userLoginToken = method.getAnnotation(UserLoginToken.class);
-            if (userLoginToken.required()) {
+        if (method.isAnnotationPresent(RequireToken.class)) {
+            RequireToken requireToken = method.getAnnotation(RequireToken.class);
+            if (requireToken.required()) {
                 // 执行认证
                 if (token == null) {
                     throw new RuntimeException("无token，请重新登录");
@@ -55,18 +58,20 @@ public class AuthenticationInterceptor implements HandlerInterceptor {
                 try {
                     userId = JWT.decode(token).getAudience().get(0);
                 } catch (JWTDecodeException j) {
-                    throw new RuntimeException("401");
+                    throw new RuntimeException("token解析失败");
                 }
-                Userinfo user = userService.get(new Long(userId));
+                Userinfo user = userService.get(Long.valueOf(userId));
                 if (user == null) {
                     throw new RuntimeException("用户不存在，请重新登录");
                 }
+
+                String password = user.getPassWord();
                 // 验证 token
-                JWTVerifier jwtVerifier = JWT.require(Algorithm.HMAC256(user.getPassWord())).build();
+                JWTVerifier jwtVerifier = JWT.require(Algorithm.HMAC256(password)).build();
                 try {
                     jwtVerifier.verify(token);
                 } catch (JWTVerificationException e) {
-                    throw new RuntimeException("401");
+                    throw new RuntimeException("token验证失败");
                 }
                 return true;
             }
